--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ h1 {
     text-align: center;
     font-weight: bold;
     color: white;
+    margin: 15px;
+    padding: 15px;
+    font-size: 50px;
 }
 .container {
     justify-content: center;
@@ -14,6 +17,7 @@ img {
     height: 300px;
     margin: 10px;
     padding: 10px;
+    border-radius: 95px;
 }
 
 body {
