--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ h1 {
     padding: 15px;
     font-size: 50px;
 }
+.titulo {
+    border: 3px solid white;
+    width: 35%;
+    border-radius: 10px;
+    margin-left: 600px;
+    margin-bottom: 150px;
+}
 .container {
     justify-content: center;
     display: flex;
