--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ h1 {
 .titulo {
     border: 3px solid white;
     width: 35%;
-    border-radius: 10px;
+    border-radius: 70px;
     margin-left: 600px;
-    margin-bottom: 150px;
+    margin-bottom: 140px;
+    margin-top: 100px;
 }
 .container {
     justify-content: center;
@@ -24,7 +25,7 @@ img {
     height: 300px;
     margin: 10px;
     padding: 10px;
-    border-radius: 95px;
+    border-radius: 110px;
 }
 
 body {
