--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+   background: url("https://i.pinimg.com/originals/50/ce/fc/50cefc2122adfae92d31df3c13b83244.jpg"); 
+}
 h1 {
     text-align: center;
     font-weight: bold;
