--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
     border: 3px solid white;
     width: 35%;
     border-radius: 70px;
-    margin-left: 600px;
+    text-align: center;
     margin-bottom: 140px;
     margin-top: 100px;
 }
